--- a/howards/styles.css
+++ b/howards/styles.css
@@ -28,7 +28,7 @@ a:hover {
 .topsection {
     text-align: center;
     background-color: rgb(255, 255, 255);
-    opacity: .80;
+    opacity: .90;
     font-family:'Times New Roman', Times, serif;
     padding-bottom: 1px;
 }
@@ -102,8 +102,10 @@ td {
 
 .happy {
     font-family: lake;
-    font-size: 4em;
+    font-size: 4.5em;
     color: white;
+    text-shadow: 2px 1px 2px black;
+
 }
 
 .earl {
